--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -205,7 +205,7 @@
 
 \newcommand{\posreltypes}{T_R^{X \union \exppos}}
 
-\newcommand{\prepend}[2]{\cons_{#1}^{#2}}
+\newcommand{\prepend}[1]{\cons_{#1}}
 
 \newcommand{\prevrule}[1]{\mathsf{Prev}[ #1 ]}
 
@@ -234,6 +234,8 @@
 \newcommand{\reltypespos}[3]{\mathsf{RelTypes}[ #1, #2, #3 ]}
 
 \newcommand{\reltypestypes}[1]{\mathsf{RelTypes}[ #1 ]}
+
+\newcommand{\rename}[3]{ #1[ #3 / #2 ] }
 
 \newcommand{\resvar}[1]{\nu[ #1 ]}
 
