--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -167,6 +167,8 @@
 
 \newcommand{\judges}{\vdash}
 
+\newcommand{\justpos}[1]{#1\downarrow}
+
 \newcommand{\leftchild}{\mathsf{l}}
 
 \newcommand{\letexp}[4]{\cc{let(} #1 \cc{,} #2 \cc{)=} #3 \cc{ in } #4}
@@ -176,6 +178,8 @@
 \newcommand{\matchexp}[5]{\cc{match } #1 \cc{ with } #2 \cc{->} #3 \cc{|} #4 \cc{->} #5}
 
 \newcommand{\mutclosure}[2]{\mathcal{C}_{#1}^{#2}}
+
+\newcommand{\mutinds}[1]{\mathcal{M}_I}
 
 \newcommand{\nilrel}{\mathsf{NilRel}}
 
@@ -284,6 +288,8 @@
 \newcommand{\symstep}[1]{\mathsf{SymStep}[ #1 ]}
 
 \newcommand{\symvars}[1]{\mathsf{symvars}_{#1}}
+
+\newcommand{\terminates}[2]{\Omega(#1, #2)}
 
 \newcommand{\tileind}{\mathsf{i}}
 
